pyinfra/pyinfra-debug.log
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/main.py", line 225, in cli
    _main(*args, **kwargs)
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/main.py", line 329, in _main
    inventory = make_inventory(
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/inventory.py", line 173, in make_inventory
    return make_inventory_from_files(inventory, override_data, cwd, group_data_directories)
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/inventory.py", line 260, in make_inventory_from_files
    groups = _get_groups_from_filename(inventory_filename)
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/inventory.py", line 91, in _get_groups_from_filename
    attrs = exec_file(inventory_filename, return_locals=True)
  File "/home/benjamindaunoravicius/.local/lib/python3.10/site-packages/pyinfra_cli/util.py", line 57, in exec_file
    code = compile(code_str, filename, "exec")
  File "hosts.ini", line 2
    10.251.170.52 node_name=master-1 ansible_user=ubuntu ansible_ssh_private_key_file=/home/benjamindaunoravicius/.ssh/id_rsa_homelab net_interface=ens3
          ^^^^
SyntaxError: invalid syntax
